--- a/motion_detection/motion_detection.ipynb
+++ b/motion_detection/motion_detection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "background_subtractor = cv2.createBackgroundSubtractorKNN(history=4, dist2Threshold=4, detectShadows=True)\n",
+    "background_subtractor = cv2.createBackgroundSubtractorKNN(history=200)\n",
     "\n",
     "\n",
     "ksize = (5,5)\n",
@@ -150,25 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/fdMwtmIRiy4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/zazngKtVmRc\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/fdMwtmIRiy4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/zazngKtVmRc\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>')"
    ]
   }
  ],
