--- a/intruder_detection/intruder_detection.ipynb
+++ b/intruder_detection/intruder_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,11 @@
     "\n",
     "        frame_mask_bgr = cv2.cvtColor(frame_mask, cv2.COLOR_GRAY2BGR)\n",
     "        frame_mask_erode_bgr = cv2.cvtColor(frame_mask_erode, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "        contours, hierarchy = cv2.findContours(frame_mask_erode, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "        if len(contours) > 0:\n",
+    "            cv2.drawContours(frame_mask_erode_bgr, contours, -1, (255,0,255), 2 )\n",
+    "            conoturs_sorted = sorted(contours, key=cv2.contourArea, reverse=True)\n",
     "\n",
     "        frame_mask_erode\n",
     "        video_out.write(frame_erode_c)\n",
